--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
+    "sass-loader": "^10.4.1",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
-    "postcss": "^8.4.17"
+    "@nuxtjs/style-resources": "^1.2.1",
+    "node-sass": "^8.0.0",
+    "postcss-preset-env": "^6.7.1"
   }
 }
