--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
+    "pinia": "^2.0.28",
     "sass-loader": "^10.4.1",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
